# mcp-attr

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.ja.md  README.md  _typos.toml
.cursor/rules/: cargo-toml.mdc  doc.mdc  mcp-server-attr-codegen-test.mdc  rust-mcp-attr.mdc  rust.mdc
.notes/: fix-error-in-doc.md  fix-rustdoc-error.md  generate-readme-ja.md  glossary.md  links.md  make-doc-comment.md  mcp-client-design.md  mcp-server-test.md  order-comment-translation.md  todo.md  translate-readme-to-en.md
codegen/: Cargo.toml
codegen-old/: Cargo.toml
codegen-old/src/: main.rs
codegen/src/: add_derive.prompt.md  add_derive.rs  add_derive_step2.prompt.md  derive_default.prompt.md  derive_default.rs  lib.rs  main.rs  schema.rs  transitivity.md  transitivity.rs  transitivity2.rs  transitivity3.rs  utils.rs
codegen/src/add_derive/: tests.rs
codegen/src/derive_default/: tests.rs
codegen/src/transitivity2/: tests.rs
codegen/src/transitivity3/: syn_utils.rs
codegen/tests/: test_data.rs  transitivity_test.rs
mcp-attr/: Cargo.toml
mcp-attr-macros/: Cargo.toml
mcp-attr-macros/src/: lib.rs  prompts.rs  resources.rs  syn_utils.rs  tools.rs  utils.rs
mcp-attr/examples/: char_count.rs  invalid_palyground.rs  tool_info.rs
mcp-attr/src/: client.rs  common.rs  error.rs  helpers.rs  lib.rs  mcp_server_attr.md  schema.rs  schema_ext.rs  schema_old.rs  server.rs  tests_readme.rs  transitivity.rs  utils.rs
mcp-attr/src/server/: builder.rs  errors.rs  mcp_server_attr.rs
mcp-attr/tests/: attr_prompt.rs  attr_resource.rs  attr_tool.rs  builder.rs  completion_edge_cases.rs  completion_prompt_global.rs  completion_prompt_impl.rs  completion_resource_global.rs  completion_resource_impl.rs  manual_impl.rs  mcp_server_empty.rs  mcp_server_instructions.rs  mcp_server_manual_impl.rs  mcp_server_prompts.rs  mcp_server_prompts_simple.rs  mcp_server_resources.rs  mcp_server_resources_list_manual.rs  mcp_server_resources_simple.rs  mcp_server_roots.rs  mcp_server_tools.rs  mcp_server_tools_simple.rs  mcp_server_utils.rs  return_useless_conversion.rs  test_completion_complete.rs  test_mcp_server_tool_annotations.rs  test_tool_annotations.rs
mcp-attr/tests/compile_fail/: complete_fn_invalid_arg_type.rs  complete_fn_invalid_arg_type.stderr  complete_fn_missing_value.rs  complete_fn_missing_value.stderr  complete_fn_wrong_signature.rs  complete_fn_wrong_signature.stderr  complete_function_not_found.stderr  complete_instance_method_not_found.rs  complete_instance_method_not_found.stderr  complete_instance_method_wrong_signature.rs  complete_instance_method_wrong_signature.stderr  complete_no_args.rs  complete_no_args.stderr  complete_non_display_type.rs  complete_non_display_type.stderr  complete_not_async.rs  complete_not_async.stderr  complete_not_result.rs  complete_not_result.stderr  complete_wrong_first_arg.rs  complete_wrong_first_arg.stderr  complete_wrong_second_arg.rs  complete_wrong_second_arg.stderr  completion_fn_args_invalid_type.stderr  completion_fn_signature_missing_value.stderr  completion_fn_signature_wrong.stderr  completion_fn_standalone_with_self.rs  completion_fn_standalone_with_self.stderr  completion_function_not_found.rs  completion_function_not_found.stderr  completion_instance_method_not_found.stderr  completion_instance_method_signature_wrong.stderr  completion_return_type_non_display.rs  completion_return_type_non_display.stderr  completion_signature_no_args.stderr  completion_signature_not_async.rs  completion_signature_not_async.stderr  completion_signature_not_result.rs  completion_signature_not_result.stderr  completion_signature_wrong_first_arg.rs  (+13 more)
