[package]
name = "mcp-attr"
version = "0.0.7"
edition = "2024"
authors = ["frozenlib <frozenlib@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/frozenlib/mcp-attr"
documentation = "https://docs.rs/mcp-attr/"
keywords = ["mcp", "model", "context", "protocol"]
categories = ["development-tools", "api-bindings", "asynchronous"]
description = "A library for declaratively building Model Context Protocol servers."
rust-version = "1.85.0"
include = [
    "/src/**",
    "/examples/**",
    "/tests/**",
    "/README.md",
    "/README.*.md",
    "/LICENSE*",
]


[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["raw_value"] }
base64 = "0.22.1"
futures = "0.3.31"
url = "2.5.4"
derive-ex = "0.1.8"
tokio = { version = "1.44.2", "features" = [
    "sync",
    "rt",
    "rt-multi-thread",
    "macros",
] }
ordered-float = "5.0.0"
slabmap = "0.2.1"
schemars = { workspace = true }
jsoncall = "0.0.3"
mcp-attr-macros = { version = "=0.0.7", path = "../mcp-attr-macros" }
uri-template-ex = { workspace = true }
parse-display = "0.10.0"

[dev-dependencies]
tokio = { version = "1.44.2", "features" = ["sync", "rt", "time"] }
assert-call = "0.1.2"
pretty_assertions = "1.4.1"
trybuild = "1.0.104"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "fmt",
    "chrono",
    "std",
] }
